TDSGrupal/gen/TDSGrupalParser.java
// Generated from /Users/raulrodriguezlopez-rey/Desktop/Procesadores del Lenguaje/git/TDSGrupal/TDSGrupal/src/TDSGrupal.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TDSGrupalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, IDENTIFIER=42, NUMERIC_INTEGER_CONST=43, 
		NUMERIC_REAL_CONST=44, STRING_CONST=45, COMENTARIO=46, CORCHETE=47, PARENTESIS_ASTERISCO=48, 
		WHITESPACE=49;
	public static final int
		RULE_axioma = 0, RULE_prg = 1, RULE_blq = 2, RULE_dcllist = 3, RULE_sentlist = 4, 
		RULE_sentlistAux = 5, RULE_dcl = 6, RULE_defcte = 7, RULE_ctelist = 8, 
		RULE_ctelistAux = 9, RULE_simpvalue = 10, RULE_defvar = 11, RULE_defvarlist = 12, 
		RULE_defvarlistAux = 13, RULE_varlist = 14, RULE_defproc = 15, RULE_deffun = 16, 
		RULE_formal_paramlist = 17, RULE_formal_param = 18, RULE_tbas = 19, RULE_sent = 20, 
		RULE_inc = 21, RULE_expcond = 22, RULE_expcondAux = 23, RULE_oplog = 24, 
		RULE_factorcond = 25, RULE_opcomp = 26, RULE_asig = 27, RULE_exp = 28, 
		RULE_op = 29, RULE_factor = 30, RULE_subpparamlist = 31, RULE_explist = 32, 
		RULE_proc_call = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"axioma", "prg", "blq", "dcllist", "sentlist", "sentlistAux", "dcl", 
			"defcte", "ctelist", "ctelistAux", "simpvalue", "defvar", "defvarlist", 
			"defvarlistAux", "varlist", "defproc", "deffun", "formal_paramlist", 
			"formal_param", "tbas", "sent", "inc", "expcond", "expcondAux", "oplog", 
			"factorcond", "opcomp", "asig", "exp", "op", "factor", "subpparamlist", 
			"explist", "proc_call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'.'", "'BEGIN'", "'END'", "'CONST'", "'='", 
			"'VAR'", "':'", "','", "'PROCEDURE'", "'FUNCTION'", "'('", "')'", "'integer'", 
			"'real'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'REPEAT'", 
			"'UNTIL'", "'FOR'", "':='", "'TO'", "'DOWNTO'", "'OR'", "'AND'", "'NOT'", 
			"'TRUE'", "'FALSE'", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
			"'DIV'", "'MOD'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IDENTIFIER", "NUMERIC_INTEGER_CONST", 
			"NUMERIC_REAL_CONST", "STRING_CONST", "COMENTARIO", "CORCHETE", "PARENTESIS_ASTERISCO", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TDSGrupal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private sintesis myinfo;//se declara el objeto

	    //recibir como un parametro del constructor el objeto real
	    public TDSGrupalParser (TokenStream input, sintesis theinfo){
	        this(input);
	        myinfo = theinfo;
	    }

	public TDSGrupalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AxiomaContext extends ParserRuleContext {
		public PrgContext prg;
		public PrgContext prg() {
			return getRuleContext(PrgContext.class,0);
		}
		public AxiomaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axioma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterAxioma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitAxioma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitAxioma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomaContext axioma() throws RecognitionException {
		AxiomaContext _localctx = new AxiomaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_axioma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((AxiomaContext)_localctx).prg = prg();
			System.out.println(((AxiomaContext)_localctx).prg.s); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrgContext extends ParserRuleContext {
		public Prg s;
		public Token IDENTIFIER;
		public BlqContext blq;
		public TerminalNode IDENTIFIER() { return getToken(TDSGrupalParser.IDENTIFIER, 0); }
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__0);
			setState(72);
			((PrgContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((PrgContext)_localctx).s =  new Prg("Programa: ", (((PrgContext)_localctx).IDENTIFIER!=null?((PrgContext)_localctx).IDENTIFIER.getText():null))  ;
			setState(74);
			match(T__1);
			setState(75);
			((PrgContext)_localctx).blq = blq();
			_localctx.s.add(((PrgContext)_localctx).blq.s);
			setState(77);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlqContext extends ParserRuleContext {
		public Blq s;
		public DcllistContext dcllist;
		public SentlistContext sentlist;
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BlqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitBlq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitBlq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlqContext blq() throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			((BlqContext)_localctx).s = new Blq("","");
			setState(80);
			((BlqContext)_localctx).dcllist = dcllist(new Dcllist());
			_localctx.s.setDcllist(((BlqContext)_localctx).dcllist.s);
			setState(82);
			match(T__3);
			setState(83);
			((BlqContext)_localctx).sentlist = sentlist(new Sentlist());
			_localctx.s.setSentlist(((BlqContext)_localctx).sentlist.s);
			setState(85);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistContext extends ParserRuleContext {
		public Dcllist h;
		public Dcllist s;
		public DclContext dcl;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DcllistContext(ParserRuleContext parent, int invokingState, Dcllist h) {
			super(parent, invokingState);
			this.h = h;
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist(Dcllist h) throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState(), h);
		enterRule(_localctx, 6, RULE_dcllist);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__7:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((DcllistContext)_localctx).dcl = dcl();

				                                _localctx.h.add(((DcllistContext)_localctx).dcl.s);
				                                
				setState(89);
				dcllist(_localctx.h);
				((DcllistContext)_localctx).s = _localctx.h;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				((DcllistContext)_localctx).s = _localctx.h; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistContext extends ParserRuleContext {
		public Sentlist h;
		public Sentlist s;
		public SentContext sent;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistAuxContext sentlistAux() {
			return getRuleContext(SentlistAuxContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentlistContext(ParserRuleContext parent, int invokingState, Sentlist h) {
			super(parent, invokingState);
			this.h = h;
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitSentlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitSentlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistContext sentlist(Sentlist h) throws RecognitionException {
		SentlistContext _localctx = new SentlistContext(_ctx, getState(), h);
		enterRule(_localctx, 8, RULE_sentlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((SentlistContext)_localctx).sent = sent();
			_localctx.h.add(((SentlistContext)_localctx).sent.s);
			setState(97);
			sentlistAux(_localctx.h);
			((SentlistContext)_localctx).s = _localctx.h;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistAuxContext extends ParserRuleContext {
		public Sentlist h;
		public Sentlist s;
		public SentContext sent;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistAuxContext sentlistAux() {
			return getRuleContext(SentlistAuxContext.class,0);
		}
		public SentlistAuxContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentlistAuxContext(ParserRuleContext parent, int invokingState, Sentlist h) {
			super(parent, invokingState);
			this.h = h;
		}
		@Override public int getRuleIndex() { return RULE_sentlistAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterSentlistAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitSentlistAux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitSentlistAux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistAuxContext sentlistAux(Sentlist h) throws RecognitionException {
		SentlistAuxContext _localctx = new SentlistAuxContext(_ctx, getState(), h);
		enterRule(_localctx, 10, RULE_sentlistAux);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				((SentlistAuxContext)_localctx).s = _localctx.h;
				}
				break;
			case T__16:
			case T__19:
			case T__21:
			case T__23:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				((SentlistAuxContext)_localctx).sent = sent();
				_localctx.h.add(((SentlistAuxContext)_localctx).sent.s);
				setState(103);
				sentlistAux(_localctx.h);
				((SentlistAuxContext)_localctx).s = _localctx.h;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public Dcl s;
		public DefcteContext defcte;
		public DefvarContext defvar;
		public DefprocContext defproc;
		public DeffunContext deffun;
		public DefcteContext defcte() {
			return getRuleContext(DefcteContext.class,0);
		}
		public DefvarContext defvar() {
			return getRuleContext(DefvarContext.class,0);
		}
		public DefprocContext defproc() {
			return getRuleContext(DefprocContext.class,0);
		}
		public DeffunContext deffun() {
			return getRuleContext(DeffunContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dcl);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((DclContext)_localctx).defcte = defcte();
				((DclContext)_localctx).s =  new Dcl();_localctx.s.setDefcte(((DclContext)_localctx).defcte.s);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				((DclContext)_localctx).defvar = defvar();
				((DclContext)_localctx).s =  new Dcl();_localctx.s.setDefvar(((DclContext)_localctx).defvar.s);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				((DclContext)_localctx).defproc = defproc();
				((DclContext)_localctx).s =  new Dcl();_localctx.s.setDefSubrutina(((DclContext)_localctx).defproc.s);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				((DclContext)_localctx).deffun = deffun();
				((DclContext)_localctx).s =  new Dcl();_localctx.s.setDefSubrutina(((DclContext)_localctx).deffun.s);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefcteContext extends ParserRuleContext {
		public Defcte s;
		public CtelistContext ctelist;
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public DefcteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).enterDefcte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TDSGrupalListener ) ((TDSGrupalListener)listener).exitDefcte(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TDSGrupalVisitor ) return ((TDSGrupalVisitor<? extends T>)visitor).visitDefcte(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefcteContext defcte() throws RecognitionException {
		DefcteContext _localctx = new DefcteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_defcte);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__5);
			((DefcteContext)_localctx).s =  new Defcte();
			setState(124);
			((DefcteContext)_localctx).ctelist = ctelist();
			_localctx.s.setCtelist(((DefcteContext)_localctx).ctelist.s);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
